LB refactor , also consider ipv6
