# backend/api/v1alpha1/zz_generated.deepcopy.go
@@ -360,6 +360,11 @@ func (in *GameServerSpec) DeepCopy() *GameServerSpec {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *GameServerStatus) DeepCopyInto(out *GameServerStatus) {
 	*out = *in
+	if in.Addresses != nil {
+		in, out := &in.Addresses, &out.Addresses
+		*out = make([]string, len(*in))
+		copy(*out, *in)
+	}
 	if in.InstallExitCode != nil {
 		in, out := &in.InstallExitCode, &out.InstallExitCode
 		*out = new(int32)
